--- a/src/scraping/templates/scraping/home.html
+++ b/src/scraping/templates/scraping/home.html
@@ -10,22 +10,27 @@
         <h4>{{object.title}}</h4>
       </div>
     <div class="card-body">
+      <h5>{{object.company}}</h5>
     <p class="card-text">{{object.description}}</p>
     <p>{{object.city.name}} | {{object.language.name}} |
       <small>{{object.timestamp|date:"d-m-Y"}}</small></p>
     <a href="{{object.url}}" class="btn btn-primary">Перейти на вакансию</a>
     </div>
     </div>
-
+  {% empty%}
+    <h3 class="my-4 text-center">К сожалению, по Вашему запросу, ничего не найдено</h3>
   {% endfor %}
 
+<div class="row">
+  <div class="col-md-6 mx-auto">
+    <form action="" method="GET">
+      <div class="form-group">
+        {{form.as_p}}
+      </div>
+      <input type="submit" class="btn btn-primary" value="Найти">
+    </form>
+  </div>
+</div>
 
-<form action="" method="GET">
-  <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname" value="John"><br>
-  <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" value="Doe"><br><br>
-  <input type="submit" value="Subm!t">
-</form>
 
 {% endblock %}
